--- a/src/discord/base.css
+++ b/src/discord/base.css
@@ -20,7 +20,7 @@ button {
 	--font-display: var(--font-primary) !important;
 	/* Dark Matter Variables */
 	--avatar-size: 32px;
-	--background-image: url('https://i.imgur.com/7SbtKvw.png');
+	--background-image: url('https://anime-sama.github.io/img/wallpaper_HD_2.jpg');
 	--home-image: url('https://i.imgur.com/233d55Y.gif');
 	--background-solid: #161921;
 	--background-solid-dark: #101218;
