--- a/src/discord/base.css
+++ b/src/discord/base.css
@@ -5,7 +5,7 @@
  */
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');
-@import url('https://anime-sama.github.io/src/BlurpleRecolor.css');
+@import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css');
 @import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
 
 button {
@@ -15,12 +15,12 @@ button {
 
 /* Root Variables */
 
- :root {
+:root {
 	--font-primary: 'Karla', sans-serif;
 	--font-display: var(--font-primary) !important;
 	/* Dark Matter Variables */
 	--avatar-size: 32px;
-	--background-image: url('https://anime-sama.github.io/img/wallpaper_HD_2.jpg');
+	--background-image: url('https://i.imgur.com/7SbtKvw.png');
 	--home-image: url('https://i.imgur.com/233d55Y.gif');
 	--background-solid: #161921;
 	--background-solid-dark: #101218;
@@ -70,20 +70,19 @@ button {
 	--focus-primary: rgba(var(--accent), 1);
 }
 
- ::selection {
+::selection {
 	background-color: rgba(var(--accent-alt), 0.5);
 }
 
 
 /* Scrollbars */
 
- ::-webkit-scrollbar {
+::-webkit-scrollbar {
 	width: 14px !important;
 }
 
  ::-webkit-scrollbar-thumb {
 	border-radius: 8px !important;
-	border: none !important;
 	border: 3px solid transparent !important;
 	background-color: rgba(var(--accent-alt), 1) !important;
 }
@@ -181,11 +180,9 @@ span[class^="expandedFolderBackground-"] {
 	left: 16px;
 }
 
-.wrapper-25eVIn {
-	zoom: .83334;
-}
-
-svg[class^="placeholderMask-"] {
+.wrapper-28eC3z,
+[data-list-id='guildsnav'] [data-dnd-name] > div,
+[data-list-id='guildsnav'] svg[width="48"] {
 	width: 40px;
 	height: 40px;
 }
@@ -235,18 +232,15 @@ div[class^="sidebar-"]>nav>div[class^="searchBar"] {
 	height: 54px;
 }
 
-div[id^="members-"] {
+/* members wrapper */
+.container-2o3qEW {
 	--background-secondary: rgba(var(--black), 0.4);
 	--background-modifier-hover: rgba(var(--white), 0.07);
 	--background-modifier-active: var(--background-modifier-hover);
 	--background-modifier-selected: rgba(var(--white), 0.07);
 }
 
-div[id^="members-"]>div {
-	background-color: transparent;
-}
-
-div[id^="members-"] [class*="placeholder"] {
+div[data-list-id^="members-"] [class*="placeholder"] {
 	--backgorund-primary: var(--text-normal);
 }
 
@@ -263,7 +257,10 @@ div[class^='nowPlayingColumn'] {
 
 /* Sidebar Header */
 
-div[class*='clickable-'][aria-expanded]>header {
+nav[aria-label]>div>header {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	height: 54px;
 	--background-accent: rgba(var(--accent), 1);
 	--background-modifier-hover: rgba(var(--black), 0.25);
@@ -272,13 +269,18 @@ div[class*='clickable-'][aria-expanded]>header {
 
 /* Outer containers */
 
-#app-mount {
-	--background-tertiary: transparent;
-	--background-secondary: transparent;
+body {
 	background: var(--background-image) center/cover no-repeat;
 }
 
-#app-mount>div[class^="app-"] {
+#app-mount {
+    background-color: transparent;
+	--background-tertiary: transparent;
+	--background-secondary: transparent;
+}
+
+#app-mount>div[class^="appDevToolsWrapper-"] {
+	--background-primary: transparent;
 	--background-tertiary: transparent;
 	--background-secondary: rgba(var(--black), 0.7);
 	background-color: rgba(var(--black), 0.4);
@@ -295,13 +297,14 @@ nav+div[class^='base-'] > div[class^="notice"] {
 	border-radius: 0;
 }
 
-div[class^='base-']>div {
+div[class^='base-']>div,
+section[class*="themed-"] {
 	--background-secondary: rgba(var(--black), 0.7);
 	--background-tertiary: rgba(var(--white), 0.05);
 	--background-primary: rgba(var(--black), 0.8);
 }
 
-#app-mount>div:not([class^="app-"]),
+#app-mount>div:not([class^="appDevToolsWrapper-"]),
 .autocomplete-1vrmpx {
 	--background-primary: var(--background-solid);
 	--background-secondary: var(--background-solid-dark);
@@ -364,6 +367,7 @@ div[class^='sidebar-']>section>div:last-child {
 	width: calc(100% + 72px);
 	position: absolute;
 	left: -72px;
+	bottom: 0;
 }
 
 
@@ -445,7 +449,7 @@ div[id^="chat-messages-"][class*="cozy-"] div::before {
 	background-color: rgba(var(--accent), 0.3) !important;
 }
 
-#app-mount .container-1D34oG {
+#app-mount .container-2cd8Mz {
 	background: var(--background-primary);
 }
 
@@ -646,11 +650,14 @@ div[role="menuitem"]:active {
 }
 
 #app-mount div[data-list-id="billing-history"],
+#app-mount div[data-list-id^="private-channels-"],
 #app-mount .media-engine-video,
 .react-datepicker,
 .react-datepicker__header,
 .react-datepicker__day--outside-month,
-.react-datepicker__day--disabled {
+.react-datepicker__day--disabled,
+div[data-list-id^="members-"],
+div[data-list-id^="members-"]>div {
 	background-color: transparent !important;
 }
 
